# cross-build-tools

./: README.md  meson.build  meson_options.txt
assets/android/: AndroidManifest.xml
assets/android/src/: main.c
assets/emscripten/: shell_minimal.html.in
cross_files/: emscripten.ini
meson/: android-aarch64.ini  meson.build  meson_options.txt
meson/src/: main.c
scripts/: setup_build_env
